--- a/src/README
+++ b/src/README
@@ -68,6 +68,32 @@ tlwiki example, file /etc/pam.d/tlwiki could be created with content
 
 to authenticate against sssd.
 
+Handling expired password:
+
+    AuthPAMExpiredRedirect <URL>
+
+For both the authorization and HTTP Basic authentication case, if the
+password the user has presented has expired (PAM return codes
+PAM_CRED_EXPIRED or PAM_NEW_AUTHTOK_REQD), when AuthPAMExpiredRedirect
+is specified with a URL, redirect is made to that location. For
+FreeIPA server, the setting would be
+
+    AuthPAMExpiredRedirect https://<IPA-server>/ipa/ui/reset_password.html
+
+It is also possible to use placeholders in the URL that will be replaced
+with current location (for backreference) and username (to prefill)
+on the target page:
+
+	%s	URL of the current page.
+	%u	The username that was used for the PAM authentication.
+	%%	The character % itself.
+
+For example for FreeIPA 4.1+, the value can actually be
+
+    https://<IPA-server>/ipa/ui/reset_password.html?url=%s
+
+SELinux:
+
 On SELinux enabled systems, boolean allow_httpd_mod_auth_pam needs to
 be enabled:
 
@@ -85,7 +111,7 @@ should build and install the module.
 License
 -------
 
-Copyright 2014 Jan Pazdziora
+Copyright 2014--2016 Jan Pazdziora
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
